--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.show-sql=true
 # Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/poskuppiya?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=dinushA@727
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
